--- a/index.html
+++ b/index.html
@@ -1,14 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>
-        Hello World!!!
-    </h1>
-    <p> apa aja </p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dashboard Team 17 Semarang</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="\asset\logo-team-17.png">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  </head> 
+  <body>
+    <header>
+      <h1>DASHBOARD TEAM 17 SEMARANG</h1>
+      <h2>Maven Roasters Coffee Shop</h2>
+      <div class="filter-container">
+        <div class="filter-item">
+          <label for="product-category-select">Product Category</label>
+          <select id="product-category-select">
+            <option value="all">All</option>
+            <option value="category-1">Category 1</option>
+            <option value="category-2">Category 2</option>
+            <option value="category-3">Category 3</option>
+            <option value="category-4">Category 4</option>
+            <option value="category-5">Category 5</option>
+          </select>
+        </div>
+        <div class="filter-item">
+          <label for="store-location-select">Store Location</label>
+          <select id="store-location-select">
+            <option value="all">All</option>
+            <option value="location-1">Location 1</option>
+            <option value="location-2">Location 2</option>
+            <option value="location-3">Location 3</option>
+            <option value="location-4">Location 4</option>
+            <option value="location-5">Location 5</option>
+          </select>
+        </div>
+        <div class="filter-item">
+          <label for="transaction-month-select">Transaction by Month</label>
+          <select id="transaction-month-select">
+            <option value="all">All</option>
+            <option value="month-1">Month 1</option>
+            <option value="month-2">Month 2</option>
+            <option value="month-3">Month 3</option>
+            <option value="month-4">Month 4</option>
+            <option value="month-5">Month 5</option>
+          </select>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div>
+        <h1>Transaction by Month</h1>
+        <canvas id="transaction-by-month-chart"></canvas>
+      </div>
+      <div>
+        <h1>Pareto</h1>
+        <canvas id="pareto-chart"></canvas>
+      </div>
+      <div>
+        <h1>Correlation Price vs Total Sales</h1>
+        <canvas id="correlation-chart"></canvas>
+      </div>
+      <div>
+        <h1>Transaction Table</h1>
+        <table border="1">
+          <thead>
+            <tr>
+              <th>Product</th>
+              <th>Price</th>
+              <th>Total Sales</th>
+              <th>Transaction Date</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Product 1</td>
+              <td>$100</td>
+              <td>1000</td>
+              <td>2021-01-01</td>
+            </tr>
+            <tr>
+              <td>Product 2</td>
+              <td>$200</td>
+              <td>2000</td>
+              <td>2021-01-02</td>
+            </tr>
+            <tr>
+              <td>Product 3</td>
+              <td>$300</td>
+              <td>3000</td>
+              <td>2021-01-03</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </main>
+    <script src="scripts.js"></script>
+  </body>
 </html>
