--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Team 17 Semarang</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" type="image/x-icon" href="asset/logo-team-17.png" />
+  <link rel="icon" type="image/x-icon" href="asset\LOGO TEAM 17.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
@@ -14,7 +14,7 @@
   <header>
     <nav class="navbar">
       <div class="navbar-logo">
-        <img src="asset/logo-team-17.png" alt="Team 17 Logo" />
+        <img src="asset\LOGO TEAM 17.png" alt="Team 17 Logo" />
       </div>
       <div class="navbar-links">
         <button onclick="window.location.href='index.html'">Dashboard</button>
@@ -28,53 +28,64 @@
     </div>
     <div class="team-grid">
       <div class="team-member">
-        <img src="asset/member-1.jpg" alt="Team Member 1">
+        <img src="asset\HAFIZ.jpg" alt="Team Member 1">
         <h3>Mohamad Hafizh Ashifani</h3>
-        <h4>Role : Team Leader</h4>
+        <h4>Role : Team / Project Leader</h4>
       </div>
       <div class="team-member">
-        <img src="asset/member-2.jpg" alt="Team Member 2">
-        <h3>Brian Johnson</h3>
+        <img src="asset\MUHAMMAD TEGAR.jpg" alt="Team Member 2">
+        <h3>Muhammad Tegar Arif Darmawan</h3>
+        <h4>Role : Data Visualization / Quality Assurance</h4>
       </div>
       <div class="team-member">
-        <img src="asset/member-3.jpg" alt="Team Member 3">
-        <h3>Christine Williams</h3>
+        <img src="asset\namirah.jpg" alt="Team Member 3">
+        <h3>Namirah Fitri Ramadhani</h3>
+        <h4>Role : Data Cleaning / Quality Assurance</h4>
       </div>
       <div class="team-member">
-        <img src="asset/member-4.jpg" alt="Team Member 4">
-        <h3>David Brown</h3>
+        <img src="asset\audrey.jpg" alt="Team Member 4">
+        <h3>Audrey Gayle P. C.</h3>
+        <h4>Role : Data Analyst / Front End Engineer</h4>
       </div>
       <div class="team-member">
-        <img src="asset/member-5.jpg" alt="Team Member 5">
-        <h3>Emily Davis</h3>
+        <img src="asset\FAHMI.jpg" alt="Team Member 5">
+        <h3>Fahmi An Naafi</h3>
+        <h4>Role : Data Cleaning / Pitch Deck Team</h4>
       </div>
       <div class="team-member">
-        <img src="asset/member-6.jpg" alt="Team Member 6">
-        <h3>Frank Miller</h3>
+        <img src="asset\SHIRIN.jpg" alt="Team Member 6">
+        <h3>Shirin Nur Fadhillah</h3>
+        <h4>Data Communication / Pitch Deck Team</h4>
       </div>
       <div class="team-member">
-        <img src="asset/member-7.jpg" alt="Team Member 7">
-        <h3>Grace Wilson</h3>
+        <img src="asset\RAIHAN.jpg" alt="Team Member 7">
+        <h3>Raihan Akbar</h3>
+        <h4>Data Analyst / Front End Engineer</h4>
       </div>
       <div class="team-member">
-        <img src="asset/member-8.jpg" alt="Team Member 8">
-        <h3>Hannah Moore</h3>
+        <img src="asset\ROHWINA.jpg" alt="Team Member 8">
+        <h3>Rohwina Mel Siyari</h3>
+        <h4>Data Visualization / Pitch Deck Team</h4>
       </div>
       <div class="team-member">
-        <img src="asset/member-9.jpg" alt="Team Member 9">
-        <h3>Ian Taylor</h3>
+        <img src="asset\A.Amalia Khaerunnisa.jpg" alt="Team Member 9">
+        <h3>A.Amalia Khaerunnisa</h3>
+        <h4>Data Communication / Front End Engineer</h4>
       </div>
       <div class="team-member">
-        <img src="asset/member-10.jpg" alt="Team Member 10">
-        <h3>Jessica Anderson</h3>
+        <img src="asset\Henry Yusuf Rizaldy.jpg" alt="Team Member 10">
+        <h3>Henry Yusuf Rizaldy</h3>
+        <h4>Data Visualization / Deployment Team</h4>
       </div>
       <div class="team-member">
-        <img src="asset/member-11.jpg" alt="Team Member 11">
-        <h3>Kyle Thomas</h3>
+        <img src="asset\Yasmien.jpg" alt="Team Member 11">
+        <h3>Yasmien Syaqinah</h3>
+        <h4>Data Analyst / Front End Engineer</h4>
       </div>
       <div class="team-member">
-        <img src="asset/member-12.jpg" alt="Team Member 12">
-        <h3>Laura Jackson</h3>
+        <img src="asset\Ana Safitri .jpg" alt="Team Member 12">
+        <h3>Ana Safitri</h3>
+        <h4> Data Communication / Front End Engineer</h4>
       </div>
     </div>
   </div>
