--- a/team.html
+++ b/team.html
@@ -14,7 +14,7 @@
   <header>
     <nav class="navbar">
       <div class="navbar-logo">
-        <img src="asset\LOGO TEAM 17.png" alt="Team 17 Logo" />
+        <img src="asset\logo-team-17.png" alt="Team 17 Logo" />
       </div>
       <div class="navbar-links">
         <button onclick="window.location.href='index.html'">Dashboard</button>
