--- a/team.html
+++ b/team.html
@@ -38,12 +38,12 @@
         <h4>Role : Data Visualization / Quality Assurance</h4>
       </div>
       <div class="team-member">
-        <img src="asset\namirah.jpg" alt="Team Member 3">
+        <img src="asset/NAMIRAH.jpg" alt="Team Member 3">
         <h3>Namirah Fitri Ramadhani</h3>
         <h4>Role : Data Cleaning / Quality Assurance</h4>
       </div>
       <div class="team-member">
-        <img src="asset\audrey.jpg" alt="Team Member 4">
+        <img src="asset/AUDREY.jpg" alt="Team Member 4">
         <h3>Audrey Gayle P. C.</h3>
         <h4>Role : Data Analyst / Front End Engineer</h4>
       </div>
